Fix food list alignment on home screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 * {
+    /*border: 2px solid red;*/
     font-family: 'Trebuchet MS', helvetica, arial;
     background-color: honeydew;
 }
@@ -11,20 +12,19 @@ html {
     text-align: center;
 }
 
-#homelist, #reclist {
-    text-align: center;
+#homelist {
+    padding: 0%;
     font-weight: bolder;
     display: flex;
-    list-style: none;
+    list-style-type: none;
 }
 
-#reclist {
-    text-align: center;
+#homediv {
+    display: flex;
     margin: auto;
 }
 
 .lists {
-    margin: auto;
     padding-left: 2em;
     padding-right: 2em;
 }
